feat(agentic-ai): Update agent instance metrics on LLM turns (#7372)
* chore: add new error code for failing agent instance updates

* chore: extend AgentMetrics with new computational features

* feat: extend CamundaAgentInstanceClient with update method

* feat: introduce ToolCallResult partitioning

* feat: add AgentInstanceUpdateRequest

* feat: update agent instance with state handling and metrics deltas on model turns

# Conflicts:
#	connectors/agentic-ai/src/main/java/io/camunda/connector/agenticai/aiagent/agent/AgentMessagesHandlerImpl.java

* fix: switch toolCalls metric to LLM response count, drop partition extraction layer

Read toolCallsDelta from the LLM assistant message instead of the
pre-LLM ToolCallResultsPartition, so the metric counts tool calls
requested by the model in this turn rather than results resolved
before the call.

Remove AddedUserMessagesResult, ToolCallResultsPartition and
ToolCallResultsPartitioner — no external consumer of the partition
remains. Inline the partitioning logic back into
AgentMessagesHandlerImpl.buildToolCallResultMessage and revert
AgentMessagesHandler.addUserMessages to return List<Message> directly.

* test: update handler tests for LLM-based toolCalls metric

toolCalls in agentContext.metrics() and in patch deltas now reflects
the count of tool calls requested by the LLM (assistantMessage.toolCalls()),
not the count of resolved results fed into the prior turn.

* docs: sync plan doc with implemented toolCalls metric source

toolCalls counts LLM-requested tool calls (assistantMessage.toolCalls()),
not resolved results. Partition extraction was reverted — no consumer
once the metric source moved. §6, §7b, cadence table, critical-files
table, and notable-shifts updated accordingly.

* test: Revert AgentMessagesHandlerTest

* refactor: extract processConversation phases into focused private methods

Each extracted method has one responsibility:
- initializeRuntimeMemory — create runtime memory and load from session
- 